# xclaw-ag-memory-guard

./: README.md  SKILL.md  pyproject.toml
src/xclaw_ag_memory_guard/: __init__.py  config.py  detector.py  interceptor.py
src/xclaw_ag_memory_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_memory_guard.py
